...
                  Card(
                    child: Padding(
                      padding: const EdgeInsets.all(20),
                      child: Column(
                        children: [
                          TextFormField(
                            key: const ValueKey('repair-title-field'),
                            controller: _titleController,
                            decoration: InputDecoration(
                              labelText: context.l10n.title,
                            ),
                            textInputAction: TextInputAction.next,
                            validator: _requiredValidator,
...
